syntax = "proto3";

package tgstore;

option go_package = "github.com/olegtemek/tg-store;pb";


message Empty{}

// SERVICE USER 
service UserService{
  rpc Registration (RegistrationRequest) returns (RegistrationResponse){}
  rpc Login (LoginRequest) returns (LoginResponse){}
  rpc GetProfile (Empty) returns (ProfileResponse){}
}

message UserModel {
  int64 id = 1;
  string email = 2;
  string password = 3;
}

message RegistrationRequest {
  string email = 1;
  string password = 2;
}

message RegistrationResponse {
  UserModel user = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserModel user = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message ProfileResponse{
  UserModel user = 1;
}

// SERVICE USER 


// SERVICE FOLDER 
service FolderService{
  rpc Create (CreateFolderRequest) returns (CreateFolderResponse){}
  rpc Update (UpdateFolderRequest) returns (UpdateFolderResponse){}
  rpc GetAll (Empty) returns (GetAllFolderResponse){}
  rpc Delete (DeleteFolderRequest) returns (DeleteFolderResponse){}
}

message FolderModel {
  int64 id = 1;
  string title = 2;
  int64 userId = 3;
  int32 files = 4;
}

message CreateFolderRequest {
  string title = 1;
}

message CreateFolderResponse {
  FolderModel folder = 1;
}

message UpdateFolderRequest {
  int64 id = 1;
  string title = 2;
}

message UpdateFolderResponse {
  FolderModel folder = 1;
}

message GetAllFolderResponse{
  repeated FolderModel folders = 1;
}

message DeleteFolderRequest {
  int64 id = 1;
  string title = 2;
}

message DeleteFolderResponse {
  FolderModel folder = 1;
}


// SERVICE FOLDER 